[workspace]
resolver = "2"

members = [
    "ruwm",
    "ruwm-esp32",
]

exclude = ["ruwm-web", "ruwm-sim"]

[patch.crates-io]
ssd1351 = { git = "https://github.com/ivmarkov/ssd1351" }
#esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
#esp-idf-svc = { path = "../esp-idf-svc" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
