[package]
name = "ruwm-esp32"
version = "0.2.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2018"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["hal", "embedded"]
description = "ESP32 port of the Rust Water Meter backend."
repository = "https://github.com/ivmarkov/ruwm"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.61"

[features]
default = ["ssd1351"]

ulp = []
rtc-mem = []
nvs = []
ttgo = []
ili9342 = ["mipidsi"]
st7789 = ["mipidsi"]

[dependencies]
critical-section = "1.1"
heapless = "0.7"
log = "0.4"
futures = {version = "0.3", features = ["async-await"] }
serde = { version = "1", default-features = false }
postcard = "0.7"
embedded-hal = { version = "0.2" }
embedded-svc = { version = "0.24", features = ["nightly", "experimental"] }
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-svc = { version = "0.45", features = ["nightly", "experimental", "embassy-time-isr-queue"] }
esp-idf-hal = { version = "0.40.1", features = ["edge-executor", "embassy-sync", "critical-section"] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.1", features = ["std"] }
embassy-time = { version = "0.1" }
static_cell = { version = "1" }
edge-frame = { version = "0.5", default-features = false, features = ["assets-serve"] }
edge-executor = { version = "0.3" }
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
gfx-xtra = "0.1"
mipidsi = { version = "0.5", optional = true }
ssd1351 = { version = "0.4", optional = true }
channel-bridge = { version = "0.2", default-features = false, features = ["notification", "nightly", "embedded-svc"] }
ruwm = { version = "0.2", path = "../ruwm", features = ["edge-executor"] }

[build-dependencies]
anyhow = "1"
embuild = { version = "0.31", features = ["espidf", "elf"] }
edge-frame = { version = "0.5", default-features = false, features = ["assets-prepare"] }
