#cargo-features = ["per-package-target"]

[package]
name = "ruwm-sim"
version = "0.2.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support", "ui"]
keywords = ["embedded", "hardware-support", "ui"]
description = "An all-in-one Web simulator for the Rust Water Meter."
repository = "https://github.com/ivmarkov/ruwm"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.71"
#forced-target = "wasm32-unknown-unknown"

[profile.release]
lto = true
opt-level = 'z'

#[profile.dev]
#opt-level = 0

[dependencies]
anyhow = "1"
log = "0.4"
heapless = "0.7"
futures = "0.3"
derive_more = "0.99"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4"
yew = { version = "0.21", default-features = false, features = ["csr"] }
strum = { version = "0.25" }
serde = "1"
embassy-sync = "0.3"
embassy-time = { version = "0.1", features = ["wasm", "generic-queue"] }
embedded-hal = "1.0.0-rc.1"
embedded-hal-async = "1.0.0-rc.1"
embedded-hal02 = { package = "embedded-hal", version = "0.2", features = ["unproven"] }
nb01 = { package = "nb", version = "0.1" }
embedded-svc = { version = "0.26", default-features = false, features = ["std"] }
edge-frame = { version = "0.7", default-features = false }
ruwm = { version = "0.4", path = "../ruwm", default-features = false, features = ["system", "edge-executor"] }
ruwm-web = { version = "0.4", path = "../ruwm-web", default-features = false }
hal-sim = { version = "0.4", default-features = false, features = ["nightly", "io", "ui"] }
embedded-graphics-core = "0.4"
gfx-xtra = "0.2"
edge-executor = "0.4"
channel-bridge = { version = "0.6", features = ["nightly"]}
static_cell = "1"
critical-section = { version = "1", features = ["std"] }
