#cargo-features = ["per-package-target"]

[package]
name = "ruwm-web"
version = "0.4.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support", "ui"]
keywords = ["embedded", "hardware-support", "ui"]
description = "Web frontend for the Rust Water Meter."
repository = "https://github.com/ivmarkov/ruwm"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.71"
#forced-target = "wasm32-unknown-unknown"

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
anyhow = "1"
log = "0.4"
futures = "0.3"
derive_more = "0.99"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["console"] }
yew = { version = "0.21", default-features = false, features = ["csr"] }
yew-router = { version = "0.18" }
yewdux = "0.9"
yewdux-middleware = { version = "0.2" }
strum = "0.25"
serde = "1"
embedded-svc = { version = "0.26", default-features = false, features = ["std"] }
edge-frame = { version = "0.7", default-features = false, features = ["web"] }
ruwm = { version = "0.4", path = "../ruwm", default-features = false }
embassy-sync = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
#[target."cfg(debug_assertions)".dependencies]
#console_error_panic_hook = "0.1"
