[package]
name = "ruwm"
version = "0.2.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2018"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["hal", "embedded"]
description = "The Rust Water Meter portable async backend."
repository = "https://github.com/ivmarkov/ruwm"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["std", "edge-executor", "system"] # Note that edge-executor requires alloc
std = ["channel-bridge?/std"]
system = ["log", "futures", "embedded-hal", "embedded-svc", "embassy-futures", "embassy-sync", "embassy-time", "embedded-graphics", "profont", "gfx-xtra", "channel-bridge"]

[dependencies]
heapless = "0.7"
enumset = "1"
serde = { version = "1", default-features = false }
log = { version = "0.4", optional = true }
futures = {version = "0.3", optional = true, features = ["async-await"] }
embedded-hal = { version = "0.2.7", optional = true, features = [ "unproven" ] }
embedded-svc = { version = "0.23", optional = true, features = ["nightly", "experimental"] }
edge-frame = { version = "0.4", default-features = false, features = ["dto"] }
embassy-futures = { version = "0.1", optional = true }
embassy-sync = { version = "0.1", optional = true }
embassy-time = { version = "0.1", optional = true }
embedded-graphics = { version = "0.7", optional = true }
profont = { version = "0.5", optional = true }
gfx-xtra = { version = "0.1", optional = true }
edge-executor = { version = "0.3", optional = true }
channel-bridge = { version = "0.1", default-features = false, features = ["notification", "nightly", "embedded-svc"], optional = true }
