[package]
name = "ruwm"
version = "0.5.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["hal", "embedded"]
description = "The Rust Water Meter portable async backend."
repository = "https://github.com/ivmarkov/ruwm"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.75"

[features]
default = ["std", "edge-executor", "system"] # Note that edge-executor requires alloc
std = ["channel-bridge?/std"]
system = ["log", "futures", "embedded-hal", "embedded-hal-async", "embedded-svc", "embassy-futures", "embassy-sync", "embassy-time", "embedded-graphics", "profont", "gfx-xtra", "channel-bridge"]
max-ws-connections-16 = []
max-ws-connections-8 = []
max-ws-connections-4 = []
max-ws-connections-2 = []

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
enumset = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
log = { version = "0.4", optional = true }
futures = {version = "0.3", optional = true, features = ["async-await"] }
embedded-hal = { version = "1", optional = true }
embedded-hal-async = { version = "1", optional = true }
embedded-svc = { version = "0.27", optional = true, features = ["experimental"] }
edge-frame = { version = "0.8", default-features = false, features = ["dto"] }
embassy-futures = { version = "0.1", optional = true }
embassy-sync = { version = "0.5", optional = true }
embassy-time = { version = "0.3", optional = true }
embedded-graphics = { version = "0.8", optional = true }
profont = { version = "0.7", optional = true }
gfx-xtra = { version = "0.2", optional = true }
edge-executor = { version = "0.4", optional = true }
channel-bridge = { version = "0.8", default-features = false, features = ["embedded-svc"], optional = true }
